--- a/2006.10834/BHslices2.tex
+++ b/2006.10834/BHslices2.tex
@@ -437,7 +437,7 @@ This regular description of the state then supports the arguments\refs{\SGStBo} 
 extending the work of \refs{\NVU}.  
 
 In outline, the next section describes various time slicings of a Schwarzschild background, and describes general Schr\"odinger evolution on such slicings.  Section 
-three turns to study Hawking evolution on smooth slicings that enter the horizon.  Very explicit examples can be provided for two-dimensional black holes.  Calculation of the quantum hamiltonian reveals a description of the creation of the Hawking excitations, and this occurs at longer wavelengths, rather than microscopic wavelengths.  Other aspects of the evolving state are also studied, including the pairing (entanglement) between excitations inside and outside the horizon.  The last section closes with further discussion of the transplanckian question, of generalizations to other black holes and to cosmology, and of a possible connection to tunneling calculations of Hawking radiation\refs{\PaWi}.  It also discusses the question of including backreaction and evolution of the black hole spacetime, and that of the ultimate unitarization of the evolution.
+three turns to study Hawking evolution on smooth slicings that enter the horizon.  Very explicit examples can be provided for two-dimensional black holes.  Calculation of the quantum Hamiltonian reveals a description of the creation of the Hawking excitations, and this occurs at longer wavelengths, rather than microscopic wavelengths.  Other aspects of the evolving state are also studied, including the pairing (entanglement) between excitations inside and outside the horizon.  The last section closes with further discussion of the transplanckian question, of generalizations to other black holes and to cosmology, and of a possible connection to tunneling calculations of Hawking radiation\refs{\PaWi}.  It also discusses the question of including backreaction and evolution of the black hole spacetime, and that of the ultimate unitarization of the evolution.
 
 \newsec{Schr\"odinger evolution between slices}
 
@@ -505,7 +505,7 @@ but the general analysis extends to other fields.  Schr\"odinger evolution is ba
 %
 \eqn\canonp{\pi= {\partial_T \phi - N^i \partial_i\phi\over N}= n^\mu\partial_\mu\phi\ ,}
 %
-and the hamiltonian becomes
+and the Hamiltonian becomes
 %
 \eqn\admham{H = \int d^{D-1} x \sqrt{q} \left[ \hf N(\pi^2 + q^{ij}\partial_i \phi \partial_j \phi )+ N^i \pi\partial_i\phi \right]\ .}
 %
@@ -516,7 +516,7 @@ and the corresponding representation $\pi=-i\delta/\delta\phi$.  Then, the evolu
 %
 \eqn\evolop{U(T_2,T_1) = \exp\left\{ -i\int_{T_1}^{T_2} HdT \right\}\ .}
 %
-For a time-dependent hamiltonian $H$, which would result from a time-dependent background metric \admmet, there are subtleties in defining the corresponding Schr\"odinger evolution\refs{\ToVa\Cortetal\AgAs-\MuOe}, but those are avoided for the stationary geometries \admmet, \admvars.
+For a time-dependent Hamiltonian $H$, which would result from a time-dependent background metric \admmet, there are subtleties in defining the corresponding Schr\"odinger evolution\refs{\ToVa\Cortetal\AgAs-\MuOe}, but those are avoided for the stationary geometries \admmet, \admvars.
 
 In order to give a Fock space representation for the states and their evolution, we need to introduce an appropriate basis of mode functions.  In general there is arbitrariness in this choice.  We can think of specifying such solutions to the equations of motion by giving the data $\gamma_i(x)= (\phi_i(x), \pi_i(x))$ at some time $T$.  To quantize, one needs a division into the analog of positive and negative frequency modes, which can be provided by giving a mode basis that has a complex structure\refs{\Kay,\More,\AgAs}\ $J$ distinguishing the modes,
 %
@@ -608,7 +608,7 @@ and we can expand outside and inside solutions in the forms
 %
 \eqn\omcomm{[b_\omega,b^\dagger_{\omega'}] = [\hat b_\omega,\hat b^\dagger_{\omega'}]=4\pi\omega\delta(\omega-\omega')\ .}
 %
-Corresponding to the singularity of these modes at the horizon, the vacuum $|0\rangle_B=|0\rangle|\hat 0\rangle$ annihilated by $b_\omega$ and $\hat b_\omega$ is also singular there; it is the 2d version of the Boulware vacuum\refs{\Boul}.  While states obtained by acting on this vacuum by the corresponding creation operators are eigenstates of the hamiltonian, they are consequently  not expected to be physical states.
+Corresponding to the singularity of these modes at the horizon, the vacuum $|0\rangle_B=|0\rangle|\hat 0\rangle$ annihilated by $b_\omega$ and $\hat b_\omega$ is also singular there; it is the 2d version of the Boulware vacuum\refs{\Boul}.  While states obtained by acting on this vacuum by the corresponding creation operators are eigenstates of the Hamiltonian, they are consequently  not expected to be physical states.
 
 \subsubsec{Regular modes}
 
@@ -641,14 +641,14 @@ is now regular at the horizon, but since it is not an energy eigenstate, has non
 An important feature of these regular modes is that they match the energy eigenmodes increasingly well as $r\rightarrow\infty$.  This can be seen directly from the coordinate transformation \XtorT, and the fact that $s(r)\rightarrow r$ in this limit.\foot{They also closely match the modes $e^{-ikX^-}$ near the horizon, where the latter are also regular, but these $X^-$ modes are not well-behaved at infinity.}
 
 
-\subsec{Quantum hamiltonian}
+\subsec{Quantum Hamiltonian}
 
-Evolution in either basis of modes is determined by the quantum version of the hamiltonian, found by inserting the mode expansions \omexp\ or \kexp\  into \admham.  For right-movers, using the sliced metric \admvars\ and the right-moving condition \RMp, the ADM hamiltonian \admham\ simplifies to
+Evolution in either basis of modes is determined by the quantum version of the Hamiltonian, found by inserting the mode expansions \omexp\ or \kexp\  into \admham.  For right-movers, using the sliced metric \admvars\ and the right-moving condition \RMp, the ADM Hamiltonian \admham\ simplifies to
 %
 \eqn\hamr{H=\int dr {f\over 2-f s'} (\partial_r\phi)^2\ .}
 %
 
-For the energy eigenmodes \omps, this hamiltonian becomes
+For the energy eigenmodes \omps, this Hamiltonian becomes
 %
 \eqn\hamen{H=\hf \int {d\omega\over 4\pi\omega} \, \omega \left(b^\dagger_\omega b_\omega - \hat b^\dagger_\omega \hat b_\omega + h.c.\right) = \int {d\omega\over 4\pi\omega}\, \omega \left(b^\dagger_\omega b_\omega - \hat b^\dagger_\omega \hat b_\omega \right)\ ,}
 %
@@ -660,7 +660,7 @@ with coefficients
 %
 \eqn\ABdefs{ A(k,k')= \int_{-\infty}^\infty dr {f\over 2-fs'} {\partial_r \phi_k^* \partial_r\phi_{k'}\over kk'} \quad,\quad B(k,k')= \int_{-\infty}^\infty dr {f\over 2-fs'}{\partial_r \phi_k^* \partial_r\phi_{k'}^*\over kk'}\ ,}
 %
-and with $E_0$ a normal-ordering constant which can be subtracted from $H$.  The form of the hamiltonian \hamreg\ makes the non-trivial evolution in the regular bases clear; it includes creation of excitations through time evolution, in these bases.
+and with $E_0$ a normal-ordering constant which can be subtracted from $H$.  The form of the Hamiltonian \hamreg\ makes the non-trivial evolution in the regular bases clear; it includes creation of excitations through time evolution, in these bases.
 
 \subsec{Evolution and structure of the state}
 
@@ -671,7 +671,7 @@ We now consider evolution of a state that is the vacuum $|0\rangle$ of \rvac\ at
  This state is regular at the horizon, and is a good candidate for the initial state of the BH.  Other states that are regular at the horizon can include additional initial excitations in its vicinity, but those excitations in general either evolve to infinity or to the singularity in a short time; the condition of regularity at the horizon is expected to be the key condition governing the correct long-time evolution.
  
  
-The long-time evolution of \stateevol\ will then yield continual production of excitations from the vicinity of $r=R$, as seen from the hamiltonian \hamreg.  At $r=\infty$, as noted above, these behave just like ordinary positive-energy flat space excitations; they comprise the Hawking emission from the BH.
+The long-time evolution of \stateevol\ will then yield continual production of excitations from the vicinity of $r=R$, as seen from the Hamiltonian \hamreg.  At $r=\infty$, as noted above, these behave just like ordinary positive-energy flat space excitations; they comprise the Hawking emission from the BH.
 
 There are various checks on this.  For example, while the full evolution of the regular modes via $H$ of \hamreg\ is somewhat complicated,
 the high-energy spectrum of the Hawking radiation can be inferred directly from this expression.  Consider, for simplicity, the case of straight slices, $s(r)=r$.  In this case we find
@@ -680,7 +680,7 @@ the high-energy spectrum of the Hawking radiation can be inferred directly from 
 %
 At large $k$, $k'$, $B(k,k')\propto e^{-\pi( k+k')/2}$; for $k=k'$ this  gives the expected thermal spectrum with temperature\foot{See, {\it e.g.}, \refs{\GiNe}.} $T=1/(2\pi)$.  Notice also  from \Bstraight\ that the dominant excitations are produced at wavelengths with $k=\calo(1)$, and so there is no direct role for very high energy modes; these are only produced with the corresponding exponential suppression. 
 
-Another aspect of the Hawking state is the characteristic correlation between outgoing excitations and BH modes; their entanglement is central to the information problem/unitarity crisis.  These correlations are of course present in the description in terms of regular modes, but are more obscure.  One sees directly that the hamiltonian \hamreg\ creates correlated pairs of $k$ excitations, and the phase in \Bstraight\ indicates that they are created in the vicinity of $r=R$.  
+Another aspect of the Hawking state is the characteristic correlation between outgoing excitations and BH modes; their entanglement is central to the information problem/unitarity crisis.  These correlations are of course present in the description in terms of regular modes, but are more obscure.  One sees directly that the Hamiltonian \hamreg\ creates correlated pairs of $k$ excitations, and the phase in \Bstraight\ indicates that they are created in the vicinity of $r=R$.  
 One way of characterizing the state $|\psi,T\rangle$ is to rewrite the condition $a_k|0\rangle=0$ as
 %
 \eqn\statecond{e^{-iHT} a_k e^{iHT} |\psi,T\rangle =0\ ,}
@@ -692,7 +692,7 @@ and the correlation between excitations can for example be seen by expanding \st
 This solution has an outgoing part with $r\sim T+R$, and an ingoing part with $r\sim R-T$.  
 
 
-The trans-horizon correlations are most easily seen by using the energy eigenbasis, and the equality of the expressions \hamen\ and \hamreg\ for the hamiltonian.  For example, approaching infinity, as we have seen, the outgoing modes in the two bases become identical.  Moreover, the time translation symmetry ensures conservation of $H$.  From the expression \hamen, this conservation shows that an outgoing positive energy excitation should be paired with an effectively negative energy excitation, created by the internal operators $\hat b_\omega$.  
+The trans-horizon correlations are most easily seen by using the energy eigenbasis, and the equality of the expressions \hamen\ and \hamreg\ for the Hamiltonian.  For example, approaching infinity, as we have seen, the outgoing modes in the two bases become identical.  Moreover, the time translation symmetry ensures conservation of $H$.  From the expression \hamen, this conservation shows that an outgoing positive energy excitation should be paired with an effectively negative energy excitation, created by the internal operators $\hat b_\omega$.  
 
 This pairing can be made more explicit, in an argument extending  \refs{\UnruNotes,\HawkUnc,\GiNe}.  First, we have noted that the transform to exterior coordinate $x^-$ given by \XtorT\ is singular at $r=R$,
 %
@@ -747,7 +747,7 @@ with $C$ a normalization constant.
 However, this expression is somewhat formal, since the state $|\psi,T\rangle$ does not actually lie in the product Hilbert space, due to the type-III property of the von Neumann algebra ({\it i.e.} infinite entanglement). 
 The pairing conditions for  $|\psi,T\rangle$ can alternately be formulated in terms of the $a_k$ operators, by transforming back to that basis.  This pairing condition also ensures regular behavior of interactions with infalling matter.  This looks unexpected from the viewpoint of the energy eigenbasis, since the state contains high energy $b^\dagger_\omega$ and $\hat b^\dagger_\omega$ excitations near the horizon, but their pairing leads to a cancellation between the corresponding pieces of the stress tensor\refs{\BHIUN} and its contribution to gravitational interactions.
 
-Another aspect of the state that is evident from \hamr\ is the freezing of the evolution\refs{\QBHB} at $r=R_n$ in the case of a nice slicing, due to infinite $s'$ forcing the hamiltonian density to vanish.  Other features of the state can be investigated, but are deferred for future work, where modifications\refs{\NVU} that unitarize evolution will also be further investigated.
+Another aspect of the state that is evident from \hamr\ is the freezing of the evolution\refs{\QBHB} at $r=R_n$ in the case of a nice slicing, due to infinite $s'$ forcing the Hamiltonian density to vanish.  Other features of the state can be investigated, but are deferred for future work, where modifications\refs{\NVU} that unitarize evolution will also be further investigated.
 
 \newsec{Consequences, connections, and generalizations}
 
@@ -758,7 +758,7 @@ The relevant dimensionful scales are of order the Hawking temperature $T=1/(2\pi
 
 While for simplicity the preceding analysis focussed on the two-dimensional case, the analysis should generalize to the higher-dimensional case.  Then, the scales entering the expressions \hamreg, \ABdefs, and \Bstraight\ will be set by the horizon radius $R$.  
 
-The role of the ultrahigh-energy modes in Hawking's calculation has also led some to conclude that the Hawking radiation is ``produced" in a region microscopically close to the horizon.  In contrast, arguments have been given based on physical tests that it is more physical to describe the Hawking radiation as produced in a ``quantum atmosphere" region of size $\Delta r\sim R$ near the horizon\refs{\SGStBo} (see also \refs{\DLP}).  The description of the evolving state given above also supports the latter interpretation:  the Hawking modes, which escape to infinity with characteristic wavelength $\lambda\sim R$, are produced by the hamiltonian \hamreg\ in a region of size $\sim R$ near the horizon; this is directly connected to the absence of a role for ultraplanckian modes, which are also those ultranear the horizon.
+The role of the ultrahigh-energy modes in Hawking's calculation has also led some to conclude that the Hawking radiation is ``produced" in a region microscopically close to the horizon.  In contrast, arguments have been given based on physical tests that it is more physical to describe the Hawking radiation as produced in a ``quantum atmosphere" region of size $\Delta r\sim R$ near the horizon\refs{\SGStBo} (see also \refs{\DLP}).  The description of the evolving state given above also supports the latter interpretation:  the Hawking modes, which escape to infinity with characteristic wavelength $\lambda\sim R$, are produced by the Hamiltonian \hamreg\ in a region of size $\sim R$ near the horizon; this is directly connected to the absence of a role for ultraplanckian modes, which are also those ultranear the horizon.
 
 The analogy between Hawking radiation and cosmological production of fluctuations during inflation is well known, and we expect that similar conclusions extend to that case as well: evolution can be described without invoking transplanckian excitations, and fluctuations are produced at a characteristic length scale given by the horizon size.  However, the non-trivial time dependence there is an additional complication which we defer to future work.
 
@@ -771,7 +771,7 @@ Of course, the most important questions involve departures from the stationary e
 
 Once backreaction is accounted for, we know that we will encounter the ultimate problem of unitarity.  The preceding analysis reproduces the known entanglement of the Hawking radiation with internal excitations of the BH.  Local quantum field theory does not provide a mechanism for this entanglement to transfer to the outgoing radiation, so if the BH shrinks and disappears, unitarity is violated.  Thus, in order to save unitarity, new interactions appear to be required to transfer this entanglement to the outgoing state\refs{\NLvC,\SGmodels\BHQIUE-\NVearly,\NVU}.  If one assumes that these interactions are only present to modes within a microscopic cutoff scale of the horizon, a firewall results\refs{\SGTrieste\BPZ\AMPS-\AMPSS}.  While such a hypothesis is motivated by a picture in which the Hawking radiation is produced at these microscopic scales, the contrasting view, advocated in \SGStBo\ and supported by the analysis here, that Hawking excitations are produced in  a vicinity of size $\sim R$ near the horizon, also suggests that the new interactions that unitarize evolution are operative on these scales\refs{\SGmodels\BHQIUE-\NVearly,\NVU}.
 
-It has been argued that such unitarizing interactions might be viewed as a small, in an appropriate sense, correction to the Hawking evolution.  If so, the analysis of this paper is also helpful for that, as it provides the background evolution of the state, on top of which the additional corrections of the interactions can be described\refs{\NVU}.  Specifically, starting with a parameterization of  Schr\"odinger evolution, it should be possible to describe these interactions in an effective approach in terms of additional contributions to the hamiltonian, which transfer entanglement from the BH state to outgoing radiation.  The explicit parameterization of the background Hawking state and evolution should serve as a useful tool in this analysis.
+It has been argued that such unitarizing interactions might be viewed as a small, in an appropriate sense, correction to the Hawking evolution.  If so, the analysis of this paper is also helpful for that, as it provides the background evolution of the state, on top of which the additional corrections of the interactions can be described\refs{\NVU}.  Specifically, starting with a parameterization of  Schr\"odinger evolution, it should be possible to describe these interactions in an effective approach in terms of additional contributions to the Hamiltonian, which transfer entanglement from the BH state to outgoing radiation.  The explicit parameterization of the background Hawking state and evolution should serve as a useful tool in this analysis.
 
 
 
